package com.sytoss.edu.elevator.bom.house.buttons;

public interface FloorWithUpButton {

    void pressUpButton();
}
