@startuml
entity ElevatorDriver{

addNewSequenceOfStopsToOrder()
updateSequenceInOrder()
}

enum DoorState{
OPENED
CLOSED
}

entity Cabin{
id: int

openDoor()
closeDoor()
isOverweight()
doorOpeningRestriction()
}

entity SequenceOfStops {
id: int
stopFloors: int[]
}

Direction "direction" --o SequenceOfStops

ElevatorDriver "1" o-- "N orderSequenceOfStops" SequenceOfStops


enum EngineState{
GOING_UP
GOING_DOWN
STAYING
}

enum Direction{
UPWARDS
DOWNWARDS
}

enum ButtonState{
PRESSED
UNPRESSED
}

entity "CabinButton"{
cabinId: int
buttonValue: int

pressCabinButton()
}


abstract "FloorButton"{
  isPressed(): bool
  press(int floor, Direction direction): void
  unPress(): void
}

entity "UpFloorButton" {
  id: int

  press(int floor): void
}

entity "DownFloorButton" {
 id: int

 press(int floor): void
}

"UpFloorButton" --|> "FloorButton"
"DownFloorButton" --|> "FloorButton"

abstract Floor{
  id: int
  floorNumber: int
  visit(): void
}

interface FloorWithUpButton {
  pressUpButton(): void
}

interface FloorWithDownButton {
 pressDownButton(): void
}

entity FirstFloor {
  id: int
}

FirstFloor --|> Floor
FirstFloor ..|> FloorWithUpButton

entity LastFloor {
  id: int
}

LastFloor --|> Floor
LastFloor ..|> FloorWithDownButton

entity MiddleFloor {
  id: int
}

"UpFloorButton" "upButton" --o FirstFloor
"UpFloorButton" "upButton" --o MiddleFloor

"DownFloorButton" "downButton" --o MiddleFloor
"DownFloorButton" "downButton" --o LastFloor

MiddleFloor --|> Floor
MiddleFloor ..|> FloorWithUpButton
MiddleFloor ..|> FloorWithDownButton

Direction "direction" --o "FloorButton"

Cabin "1" o-- "N cabinButtons" "CabinButton"
ButtonState "isPressed " --o "FloorButton"
ButtonState "isPressed " --o "CabinButton"

entity Engine {
  id: int

  stop()
  start()
}

Engine o-- "engineState" EngineState

entity Shaft {
  cabinPosition: int

  getCabinPosition()
  updateSequenceOfStops()
  clearSequence()
}

Shaft "1" o-- "1 engine" Engine

entity House {
  id: int
    findNearestCabin()
    moveSequenceToShaft()

}

House "1" o-- "N floors" Floor
House "1" o-- "N shafts" Shaft

ElevatorDriver "1 ElevatorDriver" --o "1" House
Shaft "1" o-- "1 cabin" Cabin

Cabin o-- "doorState" DoorState

SequenceOfStops "0..N SequenceOfStops" --o "1" Shaft
@enduml
